packages/react-native/cpp/derec_ffi.h

typedef struct DeRecError {
  int32_t category;
  int32_t code;
  /**
   * Owned C string. Null on success. Released by [`derec_free_error`].
   */
  char *message;
  /**
   * Valid when `code == DEREC_CODE_NON_OK_STATUS`.
   */
  int32_t peer_status;
  /**
   * Owned C string. Null when not applicable. Released by [`derec_free_error`].
   */
  char *peer_memo;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t expected;
  /**
   * Valid when `code == DEREC_CODE_VERSION_MISMATCH`.
   */
  uint32_t got;
} DeRecError;
typedef struct DeRecBuffer {
  uint8_t *ptr;
  size_t len;
} DeRecBuffer;
typedef struct ProduceUnpairRequestMessageResult {
  struct DeRecError error;
  struct DeRecBuffer request_wire_bytes;
} ProduceUnpairRequestMessageResult;
typedef struct ExtractUnpairRequestResult {
  struct DeRecError error;
  uint64_t channel_id;
  /**
   * Decrypted memo. Release with `derec_free_string`.
   */
  char *memo;
  /**
   * prost-encoded inner `UnpairRequestMessage` bytes. SDK consumers
   * decode this to inspect optional fields such as `reply_to`.
   */
  struct DeRecBuffer request_proto_bytes;
} ExtractUnpairRequestResult;
typedef struct ProduceUnpairResponseMessageResult {
  struct DeRecError error;
  struct DeRecBuffer response_wire_bytes;
} ProduceUnpairResponseMessageResult;
typedef struct ExtractUnpairResponseResult {
  struct DeRecError error;
  uint64_t channel_id;
  /**
   * Inner `UnpairResponseMessage` proto bytes for chaining into
   * [`process_unpair_response_message`].
   */
  struct DeRecBuffer response_proto_bytes;
} ExtractUnpairResponseResult;
typedef struct ProcessUnpairResponseResult {
  struct DeRecError error;
} ProcessUnpairResponseResult;
/**
 * Releases a standalone C string previously returned by the SDK.
 *
 * For strings owned by a [`crate::interop::ffi::error::DeRecError`], use
 * [`crate::interop::ffi::error::derec_free_error`] which releases both owned strings
 * in one call. Safe to call with a null pointer.
 *
 * # Safety
 *
 * `ptr` must have been allocated by the DeRec SDK.
 */
void derec_free_string(char *ptr);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceUnpairRequestMessageResult produce_unpair_request_message(uint64_t channel_id,
                                                                        const uint8_t *memo_ptr,
                                                                        size_t memo_len,
                                                                        const uint8_t *shared_key_ptr,
                                                                        size_t shared_key_len,
                                                                        const uint8_t *reply_to_ptr,
                                                                        size_t reply_to_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ExtractUnpairRequestResult extract_unpair_request(const uint8_t *request_ptr,
                                                         size_t request_len,
                                                         const uint8_t *shared_key_ptr,
                                                         size_t shared_key_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProduceUnpairResponseMessageResult produce_unpair_response_message(uint64_t channel_id,
                                                                          const uint8_t *shared_key_ptr,
                                                                          size_t shared_key_len);
/**
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ExtractUnpairResponseResult extract_unpair_response(const uint8_t *response_ptr,
                                                           size_t response_len,
                                                           const uint8_t *shared_key_ptr,
                                                           size_t shared_key_len);
/**
 * `response_proto_ptr` / `response_proto_len` must be the
 * `response_proto_bytes` returned by [`extract_unpair_response`].
 *
 * # Safety
 *
 * Non-null input pointers must point to the corresponding readable byte ranges.
 */
struct ProcessUnpairResponseResult process_unpair_response_message(const uint8_t *response_proto_ptr,
                                                                   size_t response_proto_len);